# RayTracer

./: CMakeLists.txt
src/: camera.cpp  camera.hpp  main.cpp  material.hpp  object.hpp  plane.hpp  ray.hpp  renderer.hpp  scene.hpp  sphere.hpp
